RTC6/RTC6 Files/Linux/debian-bullseye/usr/share/scanlab/examples/1/scanlab/rtc6.h

    typedef int32_t LONG;     //  LONG  is assumed to be 4 Bytes
    typedef uint32_t UINT;     //  UINT  is assumed to be 4 Bytes
RTC6_API void __stdcall n_config_laser_signals_list(const UINT CardNo, const UINT Config);
RTC6_API void __stdcall n_set_laser_power(const UINT CardNo, const UINT Port, const UINT Value);
RTC6_API void __stdcall n_set_port_default_list(const UINT CardNo, const UINT Port, const UINT Value);
RTC6_API void __stdcall n_spot_distance(const UINT CardNo, const double Dist);
RTC6_API void __stdcall n_set_laser_timing(const UINT CardNo, const UINT HalfPeriod, const UINT PulseLength1, const UINT PulseLength2, const UINT TimeBase);
RTC6_API void __stdcall laser_signal_on_list(void);
RTC6_API void __stdcall laser_signal_off_list(void);
RTC6_API void __stdcall para_laser_on_pulses_list(const UINT Period, const UINT Pulses, const UINT P);
RTC6_API void __stdcall laser_on_pulses_list(const UINT Period, const UINT Pulses);
RTC6_API void __stdcall laser_on_list(const UINT Period);
RTC6_API void __stdcall set_laser_delays(const LONG LaserOnDelay, const UINT LaserOffDelay);
RTC6_API void __stdcall set_standby_list(const UINT HalfPeriod, const UINT PulseLength);
RTC6_API void __stdcall set_laser_pulses(const UINT HalfPeriod, const UINT PulseLength);
RTC6_API void __stdcall set_firstpulse_killer_list(const UINT Length);
RTC6_API void __stdcall set_qswitch_delay_list(const UINT Delay);
RTC6_API void __stdcall set_laser_pin_out_list(const UINT Pins);
RTC6_API void __stdcall set_vector_control(const UINT Ctrl, const UINT Value);
RTC6_API void __stdcall set_default_pixel_list(const UINT PulseLength);
RTC6_API void __stdcall set_auto_laser_params_list(const UINT Ctrl, const UINT Value, const UINT MinValue, const UINT MaxValue);
RTC6_API void __stdcall set_pulse_picking_list(const UINT No);
RTC6_API void __stdcall set_softstart_level_list(const UINT Index, const UINT Level1, const UINT Level2, const UINT Level3);
RTC6_API void __stdcall set_softstart_mode_list(const UINT Mode, const UINT Number, const UINT Delay);
RTC6_API void __stdcall config_laser_signals_list(const UINT Config);
RTC6_API void __stdcall set_laser_power(const UINT Port, const UINT Value);
RTC6_API void __stdcall set_port_default_list(const UINT Port, const UINT Value);
RTC6_API void __stdcall spot_distance(const double Dist);
RTC6_API void __stdcall set_laser_timing(const UINT HalfPeriod, const UINT PulseLength1, const UINT PulseLength2, const UINT TimeBase);
RTC6_API void __stdcall n_fly_return_z(const UINT CardNo, const LONG X, const LONG Y, const LONG Z);
RTC6_API void __stdcall n_fly_return(const UINT CardNo, const LONG X, const LONG Y);
RTC6_API void __stdcall n_set_rot_center_list(const UINT CardNo, const LONG X, const LONG Y);
RTC6_API void __stdcall n_set_ext_start_delay_list(const UINT CardNo, const LONG Delay, const UINT EncoderNo);
RTC6_API void __stdcall n_set_fly_x(const UINT CardNo, const double ScaleX);
RTC6_API void __stdcall n_set_fly_y(const UINT CardNo, const double ScaleY);
RTC6_API void __stdcall n_set_fly_z(const UINT CardNo, const double ScaleZ, const UINT EndoderNo);
RTC6_API void __stdcall n_set_fly_rot(const UINT CardNo, const double Resolution);
RTC6_API void __stdcall n_set_fly_2d(const UINT CardNo, const double ScaleX, const double ScaleY);
RTC6_API void __stdcall n_set_fly_x_pos(const UINT CardNo, const double ScaleX);
RTC6_API void __stdcall n_set_fly_y_pos(const UINT CardNo, const double ScaleY);
RTC6_API void __stdcall n_set_fly_rot_pos(const UINT CardNo, const double Resolution);
RTC6_API void __stdcall n_set_fly_limits(const UINT CardNo, const LONG Xmin, const LONG Xmax, const LONG Ymin, const LONG Ymax);
RTC6_API void __stdcall n_set_fly_limits_z(const UINT CardNo, const LONG Zmin, const LONG Zmax);
RTC6_API void __stdcall n_if_fly_x_overflow(const UINT CardNo, const LONG Mode);
RTC6_API void __stdcall n_if_fly_y_overflow(const UINT CardNo, const LONG Mode);
RTC6_API void __stdcall n_if_fly_z_overflow(const UINT CardNo, const LONG Mode);
RTC6_API void __stdcall n_if_not_fly_x_overflow(const UINT CardNo, const LONG Mode);
RTC6_API void __stdcall n_if_not_fly_y_overflow(const UINT CardNo, const LONG Mode);
RTC6_API void __stdcall n_if_not_fly_z_overflow(const UINT CardNo, const LONG Mode);
RTC6_API void __stdcall n_clear_fly_overflow(const UINT CardNo, const UINT Mode);
RTC6_API void __stdcall n_set_mcbsp_x_list(const UINT CardNo, const double ScaleX);
RTC6_API void __stdcall n_set_mcbsp_y_list(const UINT CardNo, const double ScaleY);
RTC6_API void __stdcall n_set_mcbsp_rot_list(const UINT CardNo, const double Resolution);
RTC6_API void __stdcall n_set_mcbsp_matrix_list(const UINT CardNo);
RTC6_API void __stdcall n_set_mcbsp_global_x_list(const UINT CardNo, const double ScaleX);
RTC6_API void __stdcall n_set_mcbsp_global_y_list(const UINT CardNo, const double ScaleY);
RTC6_API void __stdcall n_set_mcbsp_global_rot_list(const UINT CardNo, const double Resolution);
RTC6_API void __stdcall n_set_mcbsp_global_matrix_list(const UINT CardNo);
RTC6_API void __stdcall n_set_mcbsp_in_list(const UINT CardNo, const UINT Mode, const double Scale);
RTC6_API void __stdcall n_set_multi_mcbsp_in_list(const UINT CardNo, const UINT Ctrl, const UINT P, const UINT Mode);
RTC6_API void __stdcall n_wait_for_encoder_mode(const UINT CardNo, const LONG Value, const UINT EncoderNo, const LONG Mode);
RTC6_API void __stdcall n_wait_for_mcbsp(const UINT CardNo, const UINT Axis, const LONG Value, const LONG Mode);
RTC6_API void __stdcall n_set_encoder_speed(const UINT CardNo, const UINT EncoderNo, const double Speed, const double Smooth);
RTC6_API void __stdcall n_get_mcbsp_list(const UINT CardNo);
RTC6_API void __stdcall n_store_encoder(const UINT CardNo, const UINT Pos);
RTC6_API void __stdcall n_wait_for_encoder_in_range_mode(const UINT CardNo, const LONG EncXmin, const LONG EncXmax, const LONG EncYmin, const LONG EncYmax, const UINT Mode);
RTC6_API void __stdcall n_wait_for_encoder_in_range(const UINT CardNo, const LONG EncXmin, const LONG EncXmax, const LONG EncYmin, const LONG EncYmax);
RTC6_API void __stdcall n_activate_fly_xy(const UINT CardNo, const double ScaleX, const double ScaleY);
RTC6_API void __stdcall n_activate_fly_2d(const UINT CardNo, const double ScaleX, const double ScaleY);
RTC6_API void __stdcall n_activate_fly_xy_encoder(const UINT CardNo, const double ScaleX, const double ScaleY, const LONG EncX, const LONG EncY);
RTC6_API void __stdcall n_activate_fly_2d_encoder(const UINT CardNo, const double ScaleX, const double ScaleY, const LONG EncX, const LONG EncY);
RTC6_API void __stdcall n_if_not_activated(const UINT CardNo);
RTC6_API void __stdcall n_park_position(const UINT CardNo, const UINT Mode, const LONG X, const LONG Y);
RTC6_API void __stdcall n_park_return(const UINT CardNo, const UINT Mode, const LONG X, const LONG Y);
RTC6_API void __stdcall n_fly_prediction(const UINT CardNo, UINT PredictionX, UINT PredictionY);
RTC6_API void __stdcall n_set_fly_1_axis(const UINT CardNo, const UINT Axis, const UINT Mode, const double Scale);
RTC6_API void __stdcall n_fly_return_1_axis(const UINT CardNo, const UINT Axis, const LONG RetPos);
RTC6_API void __stdcall n_wait_for_1_axis(const UINT CardNo, LONG Value, const UINT EncoderMode, const LONG WaitMode, const UINT LaserMode);
RTC6_API void __stdcall n_activate_fly_1_axis(const UINT CardNo, const UINT Axis, const UINT Mode, const double Scale, const LONG Offset);
RTC6_API void __stdcall n_park_position_1_axis(const UINT CardNo, const UINT Mode, const UINT Axis, const LONG ParkPos);
RTC6_API void __stdcall n_park_return_1_axis(const UINT CardNo, const UINT Mode, const UINT Axis, const LONG RetPos);
RTC6_API void __stdcall n_set_fly_2_axes(const UINT CardNo, const UINT Axis1, const UINT Mode1, const double Scale1, const UINT Axis2, const UINT Mode2, const double Scale2);
RTC6_API void __stdcall n_fly_return_2_axes(const UINT CardNo, const UINT Axis1, const LONG RetPos1, const UINT Axis2, const LONG RetPos2);
RTC6_API void __stdcall n_wait_for_2_axes(const UINT CardNo, const UINT EncoderModeX, const LONG MinValueX, const LONG MaxValueX, const UINT EncoderModeY, const LONG MinValueY, const LONG MaxValueY, const LONG WaitMode, const UINT LaserMode);
RTC6_API void __stdcall n_activate_fly_2_axes(const UINT CardNo, const UINT ModeX, const double ScaleX, const LONG OffsetX, const UINT ModeY, const double ScaleY, const LONG OffsetY);
RTC6_API void __stdcall n_park_position_2_axes(const UINT CardNo, const UINT Mode, const LONG ParkPosX, const LONG ParkPosY);
RTC6_API void __stdcall n_park_return_2_axes(const UINT CardNo, const UINT Mode, const LONG RetPosX, const LONG RetkPosY);
RTC6_API void __stdcall n_set_fly_3_axes(const UINT CardNo, const UINT ModeX, const double ScaleX, const UINT ModeY, const double ScaleY, const UINT ModeZ, const double ScaleZ);
RTC6_API void __stdcall n_fly_return_3_axes(const UINT CardNo, const LONG RetPosX, const LONG RetPosY, const LONG RetPosZ);
RTC6_API void __stdcall n_wait_for_encoder(const UINT CardNo, const LONG Value, const UINT EncoderNo);
RTC6_API void __stdcall fly_return_z(const LONG X, const LONG Y, const LONG Z);
RTC6_API void __stdcall fly_return(const LONG X, const LONG Y);
RTC6_API void __stdcall set_rot_center_list(const LONG X, const LONG Y);
RTC6_API void __stdcall set_ext_start_delay_list(const LONG Delay, const UINT EncoderNo);
RTC6_API void __stdcall set_fly_x(const double ScaleX);
RTC6_API void __stdcall set_fly_y(const double ScaleY);
RTC6_API void __stdcall set_fly_z(const double ScaleZ, const UINT EncoderNo);
RTC6_API void __stdcall set_fly_rot(const double Resolution);
RTC6_API void __stdcall set_fly_2d(const double ScaleX, const double ScaleY);
RTC6_API void __stdcall set_fly_x_pos(const double ScaleX);
RTC6_API void __stdcall set_fly_y_pos(const double ScaleY);
RTC6_API void __stdcall set_fly_rot_pos(const double Resolution);
RTC6_API void __stdcall set_fly_limits(const LONG Xmin, const LONG Xmax, const LONG Ymin, const LONG Ymax);
RTC6_API void __stdcall set_fly_limits_z(const LONG Zmin, const LONG Zmax);
RTC6_API void __stdcall if_fly_x_overflow(const LONG Mode);
RTC6_API void __stdcall if_fly_y_overflow(const LONG Mode);
RTC6_API void __stdcall if_fly_z_overflow(const LONG Mode);
RTC6_API void __stdcall if_not_fly_x_overflow(const LONG Mode);
RTC6_API void __stdcall if_not_fly_y_overflow(const LONG Mode);
RTC6_API void __stdcall if_not_fly_z_overflow(const LONG Mode);
RTC6_API void __stdcall clear_fly_overflow(const UINT Mode);
RTC6_API void __stdcall set_mcbsp_x_list(const double ScaleX);
RTC6_API void __stdcall set_mcbsp_y_list(const double ScaleY);
RTC6_API void __stdcall set_mcbsp_rot_list(const double Resolution);
RTC6_API void __stdcall set_mcbsp_matrix_list(void);
RTC6_API void __stdcall set_mcbsp_global_x_list(const double ScaleX);
RTC6_API void __stdcall set_mcbsp_global_y_list(const double ScaleY);
RTC6_API void __stdcall set_mcbsp_global_rot_list(const double Resolution);
RTC6_API void __stdcall set_mcbsp_global_matrix_list(void);