RTC6/RTC6 Files/Windows/RTC6Import.pas

procedure n_config_laser_signals_list(CardNo: LongWord; Config: LongWord); stdcall; external RTC6DLL;
procedure n_set_laser_power(CardNo: LongWord; Port: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_set_port_default_list(CardNo: LongWord; Port: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_spot_distance(CardNo: LongWord; Dist: Double); stdcall; external RTC6DLL;
procedure n_set_laser_timing(CardNo: LongWord; HalfPeriod: LongWord; PulseLength1: LongWord; PulseLength2: LongWord; TimeBase: LongWord); stdcall; external RTC6DLL;
procedure laser_signal_on_list(); stdcall; external RTC6DLL;
procedure laser_signal_off_list(); stdcall; external RTC6DLL;
procedure para_laser_on_pulses_list(Period: LongWord; Pulses: LongWord; P: LongWord); stdcall; external RTC6DLL;
procedure laser_on_pulses_list(Period: LongWord; Pulses: LongWord); stdcall; external RTC6DLL;
procedure laser_on_list(Period: LongWord); stdcall; external RTC6DLL;
procedure set_laser_delays(LaserOnDelay: LongInt; LaserOffDelay: LongWord); stdcall; external RTC6DLL;
procedure set_standby_list(HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC6DLL;
procedure set_laser_pulses(HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC6DLL;
procedure set_firstpulse_killer_list(Length: LongWord); stdcall; external RTC6DLL;
procedure set_qswitch_delay_list(Delay: LongWord); stdcall; external RTC6DLL;
procedure set_laser_pin_out_list(Pins: LongWord); stdcall; external RTC6DLL;
procedure set_vector_control(Ctrl: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure set_default_pixel_list(PulseLength: LongWord); stdcall; external RTC6DLL;
procedure set_auto_laser_params_list(Ctrl: LongWord; Value: LongWord; MinValue: LongWord; MaxValue: LongWord); stdcall; external RTC6DLL;
procedure set_pulse_picking_list(No: LongWord); stdcall; external RTC6DLL;
procedure set_softstart_level_list(Index: LongWord; Level1: LongWord; Level2: LongWord; Level3: LongWord); stdcall; external RTC6DLL;
procedure set_softstart_mode_list(Mode: LongWord; Number: LongWord; Delay: LongWord); stdcall; external RTC6DLL;
procedure config_laser_signals_list(Config: LongWord); stdcall; external RTC6DLL;
procedure set_laser_power(Port: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure set_port_default_list(Port: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure spot_distance(Dist: Double); stdcall; external RTC6DLL;
procedure set_laser_timing(HalfPeriod: LongWord; PulseLength1: LongWord; PulseLength2: LongWord; TimeBase: LongWord); stdcall; external RTC6DLL;
procedure n_fly_return_z(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt); stdcall; external RTC6DLL;
procedure n_fly_return(CardNo: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
procedure n_set_rot_center_list(CardNo: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
procedure n_set_ext_start_delay_list(CardNo: LongWord; Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_fly_x(CardNo: LongWord; ScaleX: Double); stdcall; external RTC6DLL;
procedure n_set_fly_y(CardNo: LongWord; ScaleY: Double); stdcall; external RTC6DLL;
procedure n_set_fly_z(CardNo: LongWord; ScaleZ: Double; EndoderNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_fly_rot(CardNo: LongWord; Resolution: Double); stdcall; external RTC6DLL;
procedure n_set_fly_2d(CardNo: LongWord; ScaleX: Double; ScaleY: Double); stdcall; external RTC6DLL;
procedure n_set_fly_x_pos(CardNo: LongWord; ScaleX: Double); stdcall; external RTC6DLL;
procedure n_set_fly_y_pos(CardNo: LongWord; ScaleY: Double); stdcall; external RTC6DLL;
procedure n_set_fly_rot_pos(CardNo: LongWord; Resolution: Double); stdcall; external RTC6DLL;
procedure n_set_fly_limits(CardNo: LongWord; Xmin: LongInt; Xmax: LongInt; Ymin: LongInt; Ymax: LongInt); stdcall; external RTC6DLL;
procedure n_set_fly_limits_z(CardNo: LongWord; Zmin: LongInt; Zmax: LongInt); stdcall; external RTC6DLL;
procedure n_if_fly_x_overflow(CardNo: LongWord; Mode: LongInt); stdcall; external RTC6DLL;
procedure n_if_fly_y_overflow(CardNo: LongWord; Mode: LongInt); stdcall; external RTC6DLL;
procedure n_if_fly_z_overflow(CardNo: LongWord; Mode: LongInt); stdcall; external RTC6DLL;
procedure n_if_not_fly_x_overflow(CardNo: LongWord; Mode: LongInt); stdcall; external RTC6DLL;
procedure n_if_not_fly_y_overflow(CardNo: LongWord; Mode: LongInt); stdcall; external RTC6DLL;
procedure n_if_not_fly_z_overflow(CardNo: LongWord; Mode: LongInt); stdcall; external RTC6DLL;
procedure n_clear_fly_overflow(CardNo: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_set_mcbsp_x_list(CardNo: LongWord; ScaleX: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_y_list(CardNo: LongWord; ScaleY: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_rot_list(CardNo: LongWord; Resolution: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_matrix_list(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_mcbsp_global_x_list(CardNo: LongWord; ScaleX: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_global_y_list(CardNo: LongWord; ScaleY: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_global_rot_list(CardNo: LongWord; Resolution: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_global_matrix_list(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_mcbsp_in_list(CardNo: LongWord; Mode: LongWord; Scale: Double); stdcall; external RTC6DLL;
procedure n_set_multi_mcbsp_in_list(CardNo: LongWord; Ctrl: LongWord; P: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_wait_for_encoder_mode(CardNo: LongWord; Value: LongInt; EncoderNo: LongWord; Mode: LongInt); stdcall; external RTC6DLL;
procedure n_wait_for_mcbsp(CardNo: LongWord; Axis: LongWord; Value: LongInt; Mode: LongInt); stdcall; external RTC6DLL;
procedure n_set_encoder_speed(CardNo: LongWord; EncoderNo: LongWord; Speed: Double; Smooth: Double); stdcall; external RTC6DLL;
procedure n_get_mcbsp_list(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_store_encoder(CardNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_wait_for_encoder_in_range_mode(CardNo: LongWord; EncXmin: LongInt; EncXmax: LongInt; EncYmin: LongInt; EncYmax: LongInt; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_wait_for_encoder_in_range(CardNo: LongWord; EncXmin: LongInt; EncXmax: LongInt; EncYmin: LongInt; EncYmax: LongInt); stdcall; external RTC6DLL;
procedure n_activate_fly_xy(CardNo: LongWord; ScaleX: Double; ScaleY: Double); stdcall; external RTC6DLL;
procedure n_activate_fly_2d(CardNo: LongWord; ScaleX: Double; ScaleY: Double); stdcall; external RTC6DLL;
procedure n_activate_fly_xy_encoder(CardNo: LongWord; ScaleX: Double; ScaleY: Double; EncX: LongInt; EncY: LongInt); stdcall; external RTC6DLL;
procedure n_activate_fly_2d_encoder(CardNo: LongWord; ScaleX: Double; ScaleY: Double; EncX: LongInt; EncY: LongInt); stdcall; external RTC6DLL;
procedure n_if_not_activated(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_park_position(CardNo: LongWord; Mode: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
procedure n_park_return(CardNo: LongWord; Mode: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
procedure n_fly_prediction(CardNo: LongWord; PredictionX: LongWord; PredictionY: LongWord); stdcall; external RTC6DLL;
procedure n_set_fly_1_axis(CardNo: LongWord; Axis: LongWord; Mode: LongWord; Scale: Double); stdcall; external RTC6DLL;
procedure n_fly_return_1_axis(CardNo: LongWord; Axis: LongWord; RetPos: LongInt); stdcall; external RTC6DLL;
procedure n_wait_for_1_axis(CardNo: LongWord; Value: LongInt; EncoderMode: LongWord; WaitMode: LongInt; LaserMode: LongWord); stdcall; external RTC6DLL;
procedure n_activate_fly_1_axis(CardNo: LongWord; Axis: LongWord; Mode: LongWord; Scale: Double; Offset: LongInt); stdcall; external RTC6DLL;
procedure n_park_position_1_axis(CardNo: LongWord; Mode: LongWord; Axis: LongWord; ParkPos: LongInt); stdcall; external RTC6DLL;
procedure n_park_return_1_axis(CardNo: LongWord; Mode: LongWord; Axis: LongWord; RetPos: LongInt); stdcall; external RTC6DLL;
procedure n_set_fly_2_axes(CardNo: LongWord; Axis1: LongWord; Mode1: LongWord; Scale1: Double; Axis2: LongWord; Mode2: LongWord; Scale2: Double); stdcall; external RTC6DLL;
procedure n_fly_return_2_axes(CardNo: LongWord; Axis1: LongWord; RetPos1: LongInt; Axis2: LongWord; RetPos2: LongInt); stdcall; external RTC6DLL;
procedure n_wait_for_2_axes(CardNo: LongWord; EncoderModeX: LongWord; MinValueX: LongInt; MaxValueX: LongInt; EncoderModeY: LongWord; MinValueY: LongInt; MaxValueY: LongInt; WaitMode: LongInt; LaserMode: LongWord); stdcall; external RTC6DLL;
procedure n_activate_fly_2_axes(CardNo: LongWord; ModeX: LongWord; ScaleX: Double; OffsetX: LongInt; ModeY: LongWord; ScaleY: Double; OffsetY: LongInt); stdcall; external RTC6DLL;
procedure n_park_position_2_axes(CardNo: LongWord; Mode: LongWord; ParkPosX: LongInt; ParkPosY: LongInt); stdcall; external RTC6DLL;
procedure n_park_return_2_axes(CardNo: LongWord; Mode: LongWord; RetPosX: LongInt; RetkPosY: LongInt); stdcall; external RTC6DLL;
procedure n_set_fly_3_axes(CardNo: LongWord; ModeX: LongWord; ScaleX: Double; ModeY: LongWord; ScaleY: Double; ModeZ: LongWord; ScaleZ: Double); stdcall; external RTC6DLL;
procedure n_fly_return_3_axes(CardNo: LongWord; RetPosX: LongInt; RetPosY: LongInt; RetPosZ: LongInt); stdcall; external RTC6DLL;
procedure n_wait_for_encoder(CardNo: LongWord; Value: LongInt; EncoderNo: LongWord); stdcall; external RTC6DLL;
procedure fly_return_z(X: LongInt; Y: LongInt; Z: LongInt); stdcall; external RTC6DLL;
procedure fly_return(X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
procedure set_rot_center_list(X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
procedure set_ext_start_delay_list(Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC6DLL;
procedure set_fly_x(ScaleX: Double); stdcall; external RTC6DLL;
procedure set_fly_y(ScaleY: Double); stdcall; external RTC6DLL;
procedure set_fly_z(ScaleZ: Double; EncoderNo: LongWord); stdcall; external RTC6DLL;
procedure set_fly_rot(Resolution: Double); stdcall; external RTC6DLL;
procedure set_fly_2d(ScaleX: Double; ScaleY: Double); stdcall; external RTC6DLL;
procedure set_fly_x_pos(ScaleX: Double); stdcall; external RTC6DLL;
procedure set_fly_y_pos(ScaleY: Double); stdcall; external RTC6DLL;
procedure set_fly_rot_pos(Resolution: Double); stdcall; external RTC6DLL;
procedure set_fly_limits(Xmin: LongInt; Xmax: LongInt; Ymin: LongInt; Ymax: LongInt); stdcall; external RTC6DLL;
procedure set_fly_limits_z(Zmin: LongInt; Zmax: LongInt); stdcall; external RTC6DLL;
procedure if_fly_x_overflow(Mode: LongInt); stdcall; external RTC6DLL;
procedure if_fly_y_overflow(Mode: LongInt); stdcall; external RTC6DLL;
procedure if_fly_z_overflow(Mode: LongInt); stdcall; external RTC6DLL;
procedure if_not_fly_x_overflow(Mode: LongInt); stdcall; external RTC6DLL;
procedure if_not_fly_y_overflow(Mode: LongInt); stdcall; external RTC6DLL;
procedure if_not_fly_z_overflow(Mode: LongInt); stdcall; external RTC6DLL;
procedure clear_fly_overflow(Mode: LongWord); stdcall; external RTC6DLL;
procedure set_mcbsp_x_list(ScaleX: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_y_list(ScaleY: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_rot_list(Resolution: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_matrix_list(); stdcall; external RTC6DLL;
procedure set_mcbsp_global_x_list(ScaleX: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_global_y_list(ScaleY: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_global_rot_list(Resolution: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_global_matrix_list(); stdcall; external RTC6DLL;
